fix: correccion de tamaño de iconos en lista seleccionable de collapsables

--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -845,13 +845,14 @@ button.card {
         i,
         .material-icons-round {
           margin: auto 0;
-          font-size: 1.25rem;
+          font-size: 1.5rem;
         }
 
         .form-radio {
           cursor: pointer;
           margin-left: auto;
           width: 1.25rem;
+          min-width: 1.25rem;
           height: 1.25rem;
           appearance: none;
           background-color: $white;
